<resources>
    <string name="app_name">calculator</string>
    <string name="Button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button66">6</string>
    <string name="button6">7</string>
    <string name="button7">8</string>
    <string name="button8">9</string>
    <string name="button9">0</string>
    <string name="button10">/</string>
    <string name="button11">-</string>
    <string name="button12">*</string>
    <string name="button13">=</string>
    <string name="button15">+</string>
    <string name="button16">C</string>
    <string name="fff">00</string>
    <string name="textView">00</string>
</resources>